--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ordinary-website",
+  "name": "ordinary-ai",
   "version": "1.0.0",
+  "main": "server/server.js",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node server/server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.8",
-    "dotenv": "^16.4.5",
+    "node-fetch": "^2.6.7",
     "cors": "^2.8.5"
   }
 }
