--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ordinary-ai",
   "version": "1.0.0",
-  "main": "server/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
